# IDS_ML

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  tests_editable_install_cache.py  wrapper_smoke_support.py
.beads/: config.yaml  issues.jsonl  issues.jsonl.pre_validate_backup
.claude/: settings.json  settings.local.json
.khuym/: HANDOFF.json  STATE.md  onboarding.json  state.json
design/: UI
docs/: README.md  data_scaling_experiment_design.md  dataset_preprocessing_protocol.md  e2e_demo_runbook.md  experiment_progress_checkpoint.md  final_model_bundle.md  final_model_decision.md  hyperparameter_tuning_setup.md  ids_benchmark_recommendation.md  ids_inference_architecture.md  ids_live_sensor_architecture.md  ids_live_sensor_operations.md  ids_operator_console_architecture.md  ids_operator_console_operations.md  ids_realtime_pipeline_architecture.md  ids_record_adapter_architecture.md  ids_same_host_stack_operations.md  kaggle_parallel_benchmark.md  learning_curve_analysis.md  promotion_run_results.md  scaling_experiment_results.md  scaling_threshold_analysis.md  system_evaluation.md  threshold_tuning_analysis.md  training_benchmark_results.md
ids/: __init__.py
kaggle/: README.md
ops/: README-deploy.md  build_release.sh  ids-live-sensor.env.example  ids-operator-console.env.example  install.sh
scripts/: evaluate_iot_diad_two_stage_gated.py  fix_layout.py  fix_report_demo.py  generate_kaggle_benchmark_charts.py  ids_feature_contract.py  ids_inference.py  ids_live_capture.py  ids_live_flow_bridge.py  ids_live_sensor.py  (+32 more)
(+554 files in other folders)
